--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1279,6 +1279,7 @@ h1,h2,h3,h4,h5,h6 {
     list-style-type: none;
 }
 .slider .breadcrumbs {
+    padding-left: 14px;
     margin-top: -65px;
 }
 .breadcrumbs__item {
