--- a/src/css/style.css
+++ b/src/css/style.css
@@ -847,6 +847,7 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
     align-items: center;
     background: #FBF8F6;
+    color: #666666;
 }
 .selectBox__pseudoItem:hover {
     color: #B72429;
@@ -863,10 +864,14 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     font-size: 16px;
     line-height: 19px;
+    margin-bottom: 6px;
     border: 2px solid #D3D2CC;
     border-radius: 4px;
     background: #FBF8F6;
     cursor: pointer;
+}
+.modalForm__selectBox .selectBox__pseudoCurrent, .mapList__selectBlock  .selectBox__pseudoCurrent {
+    width:100%;
 }
 .selectBox__pseudoCurrent.selectBox__pseudoCurrent--placeholder {
     color: #888;
