--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,7 +41,9 @@ body.darken {
 p {
     margin-top: 0;
 }
-
+.slick-arrow {
+    display: none!important;
+}
 .topBar {
     position: relative;
     z-index: 99999;
@@ -533,7 +535,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .slideTitle__text {
-    padding: 0 0 0 14px;
+    padding: 0 14px 0 14px;
     color: #31312E;
     letter-spacing: 3px;
 }
@@ -942,6 +944,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .orderBlock__title {
+    min-height: 64px;
     margin-bottom: 30px;
     font-weight: bold;
     font-size: 30px;
@@ -1261,15 +1264,19 @@ h1, h2, h3, h4, h5, h6 {
 .instagram__item {
     width: 285px;
     height: 285px;
-    margin-right: 10px;
+    padding-right:  8px;
 }
 
 .instagram__item:nth-child(4) {
     margin-right: 0;
 }
-
+.instagram__image {
+    width: 100%;
+}
 .instagram__paginationWrapper, .ambassadors__paginationWrapper, .articles__paginationWrapper {
     display: flex;
+    position: relative;
+    z-index: 2;
 }
 
 /*instagram end*/
