--- a/src/css/style.css
+++ b/src/css/style.css
@@ -643,17 +643,21 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 }
 
-.paginationBlock__item.paginationBlock__item--active, .paginationBlock__item:hover, .paginationBlock__container .slick-active {
+.paginationBlock__item:hover, .paginationBlock__container .slick-active {
     color: #FBF8F6;
     padding-bottom: 3px;
     border-radius: 50%;
     background-color: #EB2E34;
 }
 
-.slick-active button {
+.slick-active button:not(.slick-prev) {
     color: #FBF8F6;
 }
 
+.slick-next:hover, .slick-prev:hover {
+    color: #FBF8F6;
+    background-color: #EB2E34;
+}
 /*slider end*/
 
 /*about start*/
@@ -752,6 +756,7 @@ h1, h2, h3, h4, h5, h6 {
 .ambassadors__container {
     display: flex;
     flex-wrap: wrap;
+    margin-right: -12px;
 }
 
 .ambassadors__container-slider {
@@ -771,10 +776,6 @@ h1, h2, h3, h4, h5, h6 {
     width: calc(33.3333333% - 8px)!important;
     margin-right: 12px;
 }
-.ambassadors__container:not(.ambassadors__container-slider) .ambassadors__item:nth-child(3n+3), .ambassadors__container:not(.ambassadors__container-slider) .ambassadors__item:last-child {
-    margin-right: 0;
-}
-
 .ambassador__main, .ambassador__sub {
     padding: 12px 32px;
     background: #FBF8F6;
@@ -859,7 +860,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .selectBox__pseudoList, .selectBox__pseudoItem {
-    margin-top: -2px;
+    margin-top: -4px;
 }
 
 .selectBox__pseudoItem {
@@ -930,7 +931,9 @@ h1, h2, h3, h4, h5, h6 {
 .orders {
     background-image: url('../img/orders_bg.png');
 }
-
+.orders__paginationWrapper {
+    display: none;
+}
 .orders__title {
     width: 50%;
     margin: 0 auto 35px auto;
