--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,3 +1,19 @@
+@media screen and (min-width: 1600px) {
+    .wrapper {
+        max-width: 1290px;
+        margin: 0 auto;
+    }
+
+    .slide__description {
+        margin: 0 105px 0 calc(100% - 1290px / 2);
+        padding-top: 110px;
+        padding-bottom: 40px;
+    }
+
+    .about__block {
+        padding: 80px 105px 80px calc(50% - 1290px / 2);
+    }
+}
 @media screen and (max-width: 1279px) {
     .wrapper {
         margin: 0 40px;
@@ -58,10 +74,6 @@
 
     .slick-slide {
         padding-right: 8px;
-    }
-
-    #main-slider .slick-slide {
-        padding-right: 0;
     }
 
     .ambassadors__item {
