--- a/src/css/style.css
+++ b/src/css/style.css
@@ -459,7 +459,7 @@ h1, h2, h3, h4, h5, h6 {
     content: url(../img/arrow-down.png);
     display: inline-block;
     vertical-align: middle;
-    padding: 10px;
+    padding: 0 10px;
     width: 26px;
     height: 26px;
     cursor: pointer;
@@ -593,13 +593,14 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
     font-size: 16px;
     line-height: 19px;
-    margin-bottom: 20px;
+
 }
 
 .slideDescription__text--bold {
     font-size: 18px;
     font-weight: bold;
     line-height: 22px;
+    margin-bottom: 20px;
 }
 
 .slidePromo__linkBlock {
@@ -677,7 +678,9 @@ h1, h2, h3, h4, h5, h6 {
 .slick-active button:not(.slick-prev) {
     color: #FBF8F6;
 }
-
+.slick-next {
+    margin-right: 0;
+}
 .slick-next:hover, .slick-prev:hover {
     color: #FBF8F6;
     background-color: #EB2E34;
@@ -781,19 +784,17 @@ h1, h2, h3, h4, h5, h6 {
 .ambassadors__container {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -12px;
 }
 
 .ambassadors__container-slider {
+    width: 100%;
     justify-content: space-between;
 }
 
 .ambassadors__item {
     display: flex;
     flex-direction: column;
-    max-width: 382px;
-    margin-right: 12px;
-    width: auto !important;
+    width: auto!important;
     height: 506px;
     margin-bottom: 40px;
 }
@@ -1206,6 +1207,7 @@ h1, h2, h3, h4, h5, h6 {
     flex-wrap: wrap;
     width: 100%;
     margin-bottom: -20px;
+    margin-right: -12px;
 }
 
 .articles__item {
@@ -1219,7 +1221,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .articles__container:not(.slick-slider) .articles__item {
-    width: calc(33.33333% - 8px) !important;
+    /*width: calc(33.33333% - 8px) !important;*/
     margin-right: 0;
 }
 
@@ -1338,11 +1340,11 @@ h1, h2, h3, h4, h5, h6 {
 .instagram__item {
     width: 285px;
     height: auto;
-    padding-right: 8px;
+    padding-right: 10px;
 }
 
 .instagram__item:nth-child(4) {
-    margin-right: 0;
+    padding-right: 0;
 }
 
 .instagram__image {
